--- a/manifest.json
+++ b/manifest.json
@@ -2,24 +2,14 @@
   "manifest_version": 2,
   "name": "__MSG_extensionName__",
   "version": "1.2.11",
-  "homepage_url": "https://github.com/jakwings/firefox-screenshot",
+  "homepage_url": "https://github.com/ZEBAS204/moz-safari-toolbar",
   "incognito": "spanning",
   "description": "__MSG_extensionDescription__",
-
-  "applications": {
-    "gecko": {
-      "id": "{49bd4b24-e5b9-4238-a241-3487486f9236}",
-      "update_url": "https://github.com/jakwings/firefox-screenshot/raw/update/update.json",
-      "strict_min_version": "56.0"
-    }
-  },
-
   "icons": {
     "24": "icons/savescreenshot.svg",
     "48": "icons/savescreenshot.svg",
     "96": "icons/savescreenshot.svg"
   },
-
   "background": {
     "scripts": [
       "utils/storage.js",
@@ -31,31 +21,34 @@
       "utils/colors.js"
     ]
   },
-
   "browser_action": {
     "default_icon": "icons/savescreenshot.svg",
     "browser_style": true,
     "default_popup": "popup/choose_format.html",
-    "theme_icons": [{
-      "dark": "icons/savescreenshot.svg",
-      "light": "icons/savescreenshot-light.svg",
-      "size": 19
-    }]
+    "theme_icons": [
+      {
+        "dark": "icons/savescreenshot.svg",
+        "light": "icons/savescreenshot-light.svg",
+        "size": 19
+      }
+    ]
   },
-
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": [
+        "<all_urls>"
+      ],
       "match_about_blank": true,
-      "js": ["utils/storage.js", "contentscript.js"]
+      "js": [
+        "utils/storage.js",
+        "contentscript.js"
+      ]
     }
   ],
-
   "options_ui": {
     "page": "options.html",
     "browser_style": true
   },
-
   "commands": {
     "full-png": {
       "description": "__MSG_region_full_label__ (PNG)"
@@ -85,7 +78,6 @@
       "description": "__MSG_region_selection_label__ (__MSG_format_copy_label__)"
     }
   },
-
   "permissions": [
     "<all_urls>",
     "contextMenus",
@@ -94,6 +86,5 @@
     "tabs",
     "theme"
   ],
-
   "default_locale": "en"
 }
